--- a/starter/index.html
+++ b/starter/index.html
@@ -30,3 +30,43 @@
   </body>
 </html>
 ......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
