--- a/starter/index.html
+++ b/starter/index.html
@@ -70,3 +70,249 @@
 </body>
 </html>
 ......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
+</div>
+</article>
+-->
+</div>
+<!-- <button class="btn-country">Where am I?</button> -->
+<div class="images"></div>
+</main>
+</body>
+</html>
+......sd16-Asynchronous;pfighseofnwerounrwofienofnvsldgk erkbsdkbertjnbods vqeovinovj bofvneovnsfovqengonsjwrnkafeqoig
