--- a/starter/index.html
+++ b/starter/index.html
@@ -6,17 +6,5 @@
     mark2, mark3; float total; float percentage; char grade; }; int main() {
     Student s; cout << "Enter student name: "; getline(cin, s.name); cout <<
     "Enter registration number: "; cin >> s.regNo; cout << "Enter marks for
-    three subjects: "; cin >> s.mark1 >> s.mark2 >> s.mark3; // idhar app nay
-    percentage check aur calculate karnee hai s.total = s.mark1 + s.mark2 +
-    s.mark3; s.percentage = (s.total / 300) * 100; // assuming each subject is
-    out of 100 // yahan grade wala karna hai if (s.percentage >= 80) s.grade =
-    'A'; else if (s.percentage >= 70) s.grade = 'B'; else if (s.percentage >=
-    60) s.grade = 'C'; else if (s.percentage >= 50) s.grade = 'D'; else s.grade
-    = 'F'; // aur yahan result cout << "\n--- Student Report ---" << endl; cout
-    << "Name: " << s.name << endl; cout << "Registration No: " << s.regNo <<
-    endl; cout << "Marks: " << s.mark1 << ", " << s.mark2 << ", " << s.mark3 <<
-    endl; cout << "Total Marks: " << s.total << endl; cout << "Percentage: " <<
-    s.percentage << "%" << endl; cout << "Grade: " << s.grade << endl; return 0;
-    }
-  </string></iostream
+    three subjects: ";
 >
