--- a/starter/index.html
+++ b/starter/index.html
@@ -1,5 +1,25 @@
 ghello my name is nagive and all of us
 <div class="in">in this berfavecv</div>
 <div id="logo">in</div>
-program in the flas
-lk kj kj rvwwrnjuhounkjhnkjnguyuyklnkjnkjn
+program in the flas lk kj kj in this game we are running a new pestici
+infecton a in this ways k th infection a and all od us are dead ass yo
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
+xcan work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into m
