--- a/starter/index.html
+++ b/starter/index.html
@@ -4,8 +4,7 @@ ghello my name is nagive and all of us
 program in the flas lk kj kj in this game we are running a new pestici
 infecton a in this ways k th infection a and all od us are dead ass yo
 can work on it about the beinging ability og horses and looking into m
-can work on it about the beinging ability og horses and looking into m
-can work on it about the beinging ability og horses and looking into m
+can work on it about the beinging ability og horses and looking into mut the beinging ability og horses and looking into m
 can work on it about the beinging ability og horses and looking into m
 can work on it about the beinging ability og horses and looking into m
 can work on it about the beinging ability og horses and looking into m
