--- a/starter/index.html
+++ b/starter/index.html
@@ -5,13 +5,13 @@ program in the flas lk kj kj in this game we are running a new pestici infecton
 a in this ways k th infection a and all od us are dead ass yo can work on it
 about the beinging ability og horses and looking into m can work on it about the
 beinging ability og horses and looking into mut the beinging ability og horses
-and looking into m can work on it about the beikjnkhknging ability og horses and
+and looking into m can work on it t the beikjnkhknging ability og horses and
 looking into m can work on it about the beinging ability og horses and looking
 into m can work on it about the beinging ability og horses and looking into m
 can work on it about the beinging ability og horses and looking into m can work
 on it about the beinging ability og horses and looking into m can work on it
 about the beinging ability og horses and looking into m can work on it about the
-beinging ability og horses and looking into m can work on it about the beinging
+beinging ability og horses and l m can work on it about the beinging
 ability og horses and looking into m can work on it about the beinging ability
 og horses and looking into m can work on it about the beinging ability og horses
 and looking into m can work on it about the beinging ability og horses and
