--- a/starter/index.html
+++ b/starter/index.html
@@ -11,10 +11,7 @@ into m can work on it about the beinging ability og horses and looking into m
 can work on it about the beinging ability ogrses and looking into m can work on
 it about the beinging ability og horses and looking into m can work on it about
 the beinging ability og horses anto m can work on it about the beinging ability
-og horses and l m can work on it about the beinging ability og horses and
-looking into m can work on it about the beinging ability og horses and looking
-into m can work on it about the beinging ability og horses and looking into m
-can work on it about the beinging ability og horses and looking into m can work
+og horses and l m can woility og horses and looking into m can work
 on it about the beinging ability og horses and looking it the beinging ability
 og horses and looking into m can work on it about the beinging ability og horses
 and looking into m can work on it about the beinging ability og horses and
