--- a/starter/index.html
+++ b/starter/index.html
@@ -11,9 +11,9 @@ into m can work on it about the beinging ability og horses and looking into m
 can work on it about the beinging ability ogrses and looking into m can work on
 it about the beinging ability og horses and looking into m can work on it about
 the beinging ability og horses anto m can work on it about the beinging ability
-og horses and l m can woility og horses and looking into m can work
-on it about the beinging ability og horses and looking it the beinging ability
-og horses and looking into m can work on it about the beinging ability og horses
-and looking into m can work on it about the beinging ability og horses and
-looking into m xcan work on it about the beinging ability og horses and looking
+og horses and l m can woility og horses and looking into m can work on it about
+the beinging ability og horses and looking it the beinging ability og horses and
+looking into m can work on it about the beinging ability og horses and looking
 into m can work on it about the beinging ability og horses and looking into m
+xcan work on it about the beinging ability og horses and looking into m can work
+on it about the beinging ability there og horses and looking into m
