--- a/starter/index.html
+++ b/starter/index.html
@@ -6,7 +6,5 @@ a ing horses and looking into mut the beinging ability og horses and looking
 into m can work on it t the beikjnkhknging ability og horses and looking in anto
 m can work on it about the beinging ability og horses and l m can woility og
 horses and looking into m can work on it about the beinging ability og horses
-and looking it the beinging ability og horses and looking into m can work on it
-about the beinging ability og horses and looking into m can work on it about the
-beinging ability og horses and looking into m xcan work on it about the beinging
+and looking it the beinges and looking into m xcan work on it about the beinging
 ability og horses and looking i
