--- a/starter/index.html
+++ b/starter/index.html
@@ -3,8 +3,5 @@ ghello my name is nagive and all of us
 <div id="logo">in</div>
 program in the flas lk kj kj in this game we are running a new pestici infecton
 a ing horses and looking into mut the beinging ability og horses and looking
-into m can work on it t the beikjnkhknging ability og horses and looking in anto
-m can work on it about the beinging ability og horses and l m can woility og
-horses and looking into m can work on it about the beinging ability og horses
-and looking it the beinges and looking into m xcan work on it about the beinging
+into m can work on it t the bthe bei xcan work on it about the beinging
 ability og horses and looking i
