--- a/starter/index.html
+++ b/starter/index.html
@@ -2,6 +2,4 @@ ghello my name is nagive and all of us
 <div class="in">in this berfavecv</div>
 <div id="logo">in</div>
 program in the flas lk kj kj in this game we are running a new pestici infecton
-a ing horses and looking into mut the beinging ability og horses and looking
-into m can work on it t the bthe bei xcan work on it about the beinging
-ability og horses and looking i
+a ing h
