--- a/starter/index.html
+++ b/starter/index.html
@@ -1,5 +1,4 @@
 ghello my name is nagive and all of us
 <div class="in">in this berfavecv</div>
 <div id="logo">in</div>
-program in the flas lk kj kj in this game we are running a new pestici infecton
-a ing h
+program in the flas lk kj kj in thisgame we are running
