--- a/starter/index.html
+++ b/starter/index.html
@@ -1,4 +1,3 @@
 ghello my name is nagive and all of us
 <div class="in">in this berfavecv</div>
-<div id="logo">in</div>
-program in the flas lk kj kj in thisgame we are running
+<div id="logo">in</de we are running
