--- a/starter/index.html
+++ b/starter/index.html
@@ -1,2 +1,1 @@
-jjkjjghello my ergerberbergsegwegsrgrsbdrbdbdbdrbname is nkbkhbagive and all of us
-<div n th l lj l lk lk is berfavecv</div
+s berfavecv</div
